--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Logging/Localization/selenium_loc_en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Logging/Localization/selenium_loc_en.json
@@ -12,7 +12,7 @@
   "loc.browser.name.wrong": "Browser name is wrong.",
   "loc.browser.navigate": "Navigate to url - '{0}'",
   "loc.browser.page.timeout": "Page loading timed out",
-  "loc.browser.ready": "Browser '%1$s' ready...",
+  "loc.browser.ready": "Browser '{0}' ready...",
   "loc.browser.refresh": "Refreshing the page",
   "loc.browser.alert.fail": "Failed while handling alert",
   "loc.button": "Button",
@@ -27,7 +27,7 @@
   "loc.combobox": "ComboBox",
   "loc.combobox.select.by.text": "Selecting value by text '{0}'",
   "loc.combobox.get.values": "Getting values array",
-  "loc.el.getattr": "Getting attribute '%1$s'",
+  "loc.el.getattr": "Getting attribute '{0}'",
   "loc.file.reading_exception": "Exception while reading file: '{0}'",
   "loc.focusing": "Focusing",
   "loc.get.text": "Getting text from element",
@@ -50,7 +50,7 @@
   "loc.text.typing": "Typing '{0}'",
   "loc.text.masked_value": "********",
   "loc.waitexists": "Wait until element exists in DOM",
-  "loc.waitinstate": "Wait until is present in state %1$s using locator: %2$s",
+  "loc.waitinstate": "Wait until is present in state {0} using locator: {1}",
   "loc.waitinvisible": "Wait until element is not visible",
-  "loc.waitnotexists": "Wait until element does not exist in DOM during %1$s seconds"
+  "loc.waitnotexists": "Wait until element does not exist in DOM during {0} seconds"
 }
