#10 throw exception if pageinfo = null

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -1,3 +1,4 @@
 {
-  "loc.baseform.unknown.type": "Неизвестный тип локатора для страницы '{0}'"
+  "loc.baseform.unknown.type": "Неизвестный тип локатора для страницы '{0}'",
+  "loc.baseform.null.pageinfo": "Не установлено значение атрибута PageInfo для формы '{0}'. Установите это значение или используйте конструктор с параметрами."
 }
