--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -16,10 +16,8 @@
   "loc.browser.refresh": "Refreshing the page",
   "loc.browser.alert.fail": "Failed while handling alert",
   "loc.button": "Button",
-  "loc.checkbox": "CheckBox",
-  "loc.checkbox.check": "Checking the '{0}' {1} with value: {2}",
+  "loc.checkbox": "CheckBox",  
   "loc.checkbox.get.state": "Getting state",
-  "loc.checkbox.uncheck": "Checking the '{0}' {1} with value: {2}",
   "loc.clicking": "Clicking",
   "loc.clicking.double": "Clicking double",
   "loc.clicking.js": "Clicking via Javascript",
@@ -44,12 +42,11 @@
   "loc.scrolling.js": "Scrolling via JavaScript",
   "loc.selecting.value": "Selecting value",
   "loc.send.text": "Setting text - '{0}'",
-  "loc.setting.value": "Setting value",
+  "loc.setting.value": "Setting value - '{0}'",
   "loc.text.clearing": "Clearing",
   "loc.text.field": "Text Field",
   "loc.text.sending.keys": "Sending keys '{0}'",
   "loc.text.typing": "Typing '{0}'",
-  "loc.text.masked_value": "********",
   "loc.waitexists": "Wait until element exists in DOM",
   "loc.waitinstate": "Wait until is present in state {0} using locator: {1}",
   "loc.waitinvisible": "Wait until element is not visible",
