--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -26,6 +26,7 @@
   "loc.combobox.select.by.text": "Selecting value by text '{0}'",
   "loc.combobox.get.values": "Getting values array",
   "loc.el.getattr": "Getting attribute '{0}'",
+  "loc.el.cssvalue": "Getting css value '{0}'",
   "loc.file.reading_exception": "Exception while reading file: '{0}'",
   "loc.focusing": "Focusing",
   "loc.get.text": "Getting text from element",
