--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -27,6 +27,7 @@
   "loc.combobox.select.by.text": "Выбор значения с текстом '{0}'",
   "loc.combobox.get.values": "Получение списка значений",
   "loc.el.getattr": "Получение аттрибута '{0}'",
+  "loc.el.cssvalue": "Получение значения css '{0}'",
   "loc.file.reading_exception": "Исключение при чтении файла: '{0}'%n",
   "loc.focusing": "Взятие элемента в фокус",
   "loc.get.text": "Получение текста элемента",
