#52 Update ConditionalWait and add DesiredState

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -50,5 +50,6 @@
   "loc.waitexists": "ќжидаем по€влени€ элемента в DOM",
   "loc.waitinstate": "ќжидание присутстви€ элемента в состо€нии {0} использу€ локатор: {1}",
   "loc.waitinvisible": "ќжидаем пока элемент исчезнет",
-  "loc.waitnotexists": "ќжидаем исчезновени€ элемента из DOM в течении {0}"
+  "loc.waitnotexists": "ќжидаем исчезновени€ элемента из DOM в течении {0}",
+  "loc.no.elements.found.in.state": "не удалось найти элементов по локатору '{0}' в {1} состо€нии"
 }
