#52 Update ConditionalWait and add DesiredState (#54)
* #52 Update ConditionalWait and add DesiredState

* #52 Remove IsThrowingNoSuchElementException from IsElementClickable

* Fix DesiredState

* #52 Add pollinginterval to waitfor

* #52 Fix comments and update ConditionalWait

* #52 Add WaitForTrue and fix comments

* #52 Rename DesiredState parameter

* #19 Add package info

* #19 Add nuspec file

* #19 Update nuspec

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -50,5 +50,7 @@
   "loc.waitexists": "Ожидаем появления элемента в DOM",
   "loc.waitinstate": "Ожидание присутствия элемента в состоянии {0} используя локатор: {1}",
   "loc.waitinvisible": "Ожидаем пока элемент исчезнет",
-  "loc.waitnotexists": "Ожидаем исчезновения элемента из DOM в течении {0}"
+  "loc.waitnotexists": "Ожидаем исчезновения элемента из DOM в течении {0}",
+  "loc.no.elements.found.in.state": "Не удалось найти элементов по локатору '{0}' в {1} состоянии",  
+  "loc.elements.were.found.but.not.in.state": "Удалось найти элементы по локатору '{0}'. Но {1}"
 }
