--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -16,7 +16,7 @@
   "loc.browser.refresh": "Refreshing the page",
   "loc.browser.alert.fail": "Failed while handling alert",
   "loc.button": "Button",
-  "loc.checkbox": "CheckBox",  
+  "loc.checkbox": "CheckBox",
   "loc.checkbox.get.state": "Getting state",
   "loc.clicking": "Clicking",
   "loc.clicking.double": "Clicking double",
@@ -51,5 +51,7 @@
   "loc.waitexists": "Wait until element exists in DOM",
   "loc.waitinstate": "Wait until is present in state {0} using locator: {1}",
   "loc.waitinvisible": "Wait until element is not visible",
-  "loc.waitnotexists": "Wait until element does not exist in DOM during {0} seconds"
+  "loc.waitnotexists": "Wait until element does not exist in DOM during {0} seconds",
+  "loc.no.elements.found.in.state": "No elements with locator '{0}' found in {1} state",
+  "loc.elements.were.found.but.not.in.state": "Elements were found by locator '{0}'. But {1}"
 }
