--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -24,6 +24,7 @@
   "loc.clicking.right": "Clicking right",
   "loc.combobox": "ComboBox",
   "loc.combobox.select.by.text": "Selecting value by text '{0}'",
+  "loc.combobox.get.texts": "Getting option texts array",
   "loc.combobox.get.values": "Getting values array",
   "loc.el.getattr": "Getting attribute '{0}'",
   "loc.el.cssvalue": "Getting css value '{0}'",
