--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -24,8 +24,11 @@
   "loc.clicking.right": "Clicking right",
   "loc.combobox": "ComboBox",
   "loc.combobox.select.by.text": "Selecting value by text '{0}'",
+  "loc.combobox.select.by.text.js": "Selecting value by text '{0}' via JavaScript",
   "loc.combobox.get.texts": "Getting option texts array",
+  "loc.combobox.get.texts.js": "Getting option texts array via JavaScript",
   "loc.combobox.get.values": "Getting values array",
+  "loc.combobox.get.text.js": "Getting selected text via JavaScript",
   "loc.el.getattr": "Getting attribute '{0}'",
   "loc.el.cssvalue": "Getting css value '{0}'",
   "loc.file.reading_exception": "Exception while reading file: '{0}'",
