--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -25,8 +25,11 @@
   "loc.clicking.right": "Клик правой кнопкой",
   "loc.combobox": "Комбобокс",
   "loc.combobox.select.by.text": "Выбор значения с текстом '{0}'",
+  "loc.combobox.select.by.text.js": "Выбор значения с текстом '{0}' (при помощи JavaScript)",
   "loc.combobox.get.texts": "Получение списка текстов опций",
+  "loc.combobox.get.texts.js": "Получение списка текстов опций (при помощи JavaScript)",
   "loc.combobox.get.values": "Получение списка значений",
+  "loc.combobox.get.text.js": "Получение списка значений (при помощи JavaScript)",
   "loc.el.getattr": "Получение аттрибута '{0}'",
   "loc.el.cssvalue": "Получение значения css '{0}'",
   "loc.file.reading_exception": "Исключение при чтении файла: '{0}'%n",
