#76 Fix russian localized values

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -21,28 +21,28 @@
   "loc.checkbox.get.state": "Получение состояния",
   "loc.clicking": "Клик",
   "loc.clicking.double": "Двойной Клик",
-  "loc.clicking.js": "Клик через Javascript",
+  "loc.clicking.js": "Клик посредством JavaScript",
   "loc.clicking.right": "Клик правой кнопкой",
   "loc.combobox": "Комбобокс",
   "loc.combobox.select.by.text": "Выбор значения с текстом '{0}'",
-  "loc.combobox.select.by.text.js": "Выбор значения с текстом '{0}' (при помощи JavaScript)",
+  "loc.combobox.select.by.text.js": "Выбор значения с текстом '{0}' посредством JavaScript",
   "loc.combobox.get.texts": "Получение списка текстов опций",
-  "loc.combobox.get.texts.js": "Получение списка текстов опций (при помощи JavaScript)",
+  "loc.combobox.get.texts.js": "Получение списка текстов опций посредством JavaScript",
   "loc.combobox.get.values": "Получение списка значений",
-  "loc.combobox.get.text.js": "Получение списка значений (при помощи JavaScript)",
+  "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
   "loc.el.getattr": "Получение аттрибута '{0}'",
   "loc.el.cssvalue": "Получение значения css '{0}'",
   "loc.file.reading_exception": "Исключение при чтении файла: '{0}'%n",
   "loc.focusing": "Взятие элемента в фокус",
   "loc.get.text": "Получение текста элемента",
-  "loc.get.text.js": "Получение текста элемента (при помощи JavaScript)",
-  "loc.hover.js": "Наведение курсора на элемент (при помощи JavaScript)",
-  "loc.is.present.js": "Присутствует (с помощью JavaScript)",
+  "loc.get.text.js": "Получение текста элемента посредством JavaScript",
+  "loc.hover.js": "Наведение курсора на элемент посредством JavaScript",
+  "loc.is.present.js": "Присутствует (посредством JavaScript)",
   "loc.label": "Надпись",
   "loc.link": "Ссылка",
   "loc.moving": "Наведение курсора на элемент",
   "loc.radio": "Радиокнопка",
-  "loc.scrolling.center.js": "Скроллинг в центр (при помощи JavaScript)",
+  "loc.scrolling.center.js": "Скроллинг в центр посредством JavaScript",
   "loc.scrolling.js": "Скроллинг с помощью JavaScript",
   "loc.selecting.value": "Выбор значения",
   "loc.send.text": "Ввод текста - '{0}'",
