--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -58,11 +58,11 @@
   "loc.waitnotexists": "Wait until element does not exist in DOM during {0} seconds",
   "loc.no.elements.found.in.state": "No elements with locator '{0}' found in {1} state",
   "loc.elements.were.found.but.not.in.state": "Elements were found by locator '{0}'. But {1}",
-  "loc.browser.switch.to.tab.name": "Switching to tab by name '{0}'",
+  "loc.browser.switch.to.tab.handle": "Switching to tab by handle '{0}'",
   "loc.browser.switch.to.tab.index": "Switching to tab by index '{0}'",
   "loc.browser.switch.to.new.tab": "Switching to new tab",
-  "loc.browser.get.tab.names": "Getting tab names",
-  "loc.browser.get.tab.name": "Getting current tab name",
+  "loc.browser.get.tab.handles": "Getting tab handles",
+  "loc.browser.get.tab.handle": "Getting current tab handle",
   "loc.browser.tab.open.new": "Opening new tab",
   "loc.browser.tab.close": "Closing tab"
 }
