Handle some locator types to generate more productive XPath for multiple elements Add missed localization values Add more tests

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -56,7 +56,10 @@
   "loc.waitinvisible": "Ожидаем пока элемент исчезнет",
   "loc.waitnotexists": "Ожидаем исчезновения элемента из DOM в течении {0}",
   "loc.no.elements.found.in.state": "Не удалось найти элементов по локатору '{0}' в {1} состоянии",
-  "loc.elements.were.found.but.not.in.state": "Удалось найти элементы по локатору '{0}'. Но {1}",
+  "loc.no.elements.found.by.locator": "Не удалось найти элементов по локатору '{0}'",
+  "loc.elements.were.found.but.not.in.state": "Удалось найти элементы по локатору '{0}', но они не в желаемом состоянии {1}",
+  "loc.elements.found.but.should.not": "Не должно быть найдено элементов по локатору '{0}' в {1} состоянии",
+  "loc.search.of.elements.failed": "Поиск элемента по локатору '{0}' прошел неудачно",
   "loc.browser.switch.to.tab.handle": "Переключение на новую вкладку по дескриптору '{0}'",
   "loc.browser.switch.to.tab.index": "Переключение на новую вкладку по индексу '{0}'",
   "loc.browser.switch.to.new.tab": "Переключение на новую вкладку",
