--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -57,7 +57,10 @@
   "loc.waitinvisible": "Wait until element is not visible",
   "loc.waitnotexists": "Wait until element does not exist in DOM during {0} seconds",
   "loc.no.elements.found.in.state": "No elements with locator '{0}' found in {1} state",
-  "loc.elements.were.found.but.not.in.state": "Elements were found by locator '{0}'. But {1}",
+  "loc.no.elements.found.by.locator": "No elements were found by locator '{0}'",
+  "loc.elements.were.found.but.not.in.state": "Elements were found by locator '{0}' but not in desired state {1}",
+  "loc.elements.found.but.should.not": "No elements should be found by locator '{0}' in {1} state",
+  "loc.search.of.elements.failed": "Search of element by locator '{0}' failed",
   "loc.browser.switch.to.tab.handle": "Switching to tab by handle '{0}'",
   "loc.browser.switch.to.tab.index": "Switching to tab by index '{0}'",
   "loc.browser.switch.to.new.tab": "Switching to new tab",
