Support logging of Element property getters. Update localized values and enhance/add missing methods to use them. Add logging of "loc.browser.ready" to resolve #164 and close #165

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -1,9 +1,9 @@
 {
-  "loc.browser.arguments.setting": "Установка стартовых аргументов браузера из JSON файла: {0}",
+  "loc.browser.arguments": "Получили стартовые аргументы браузера из settings файла: {0}",
   "loc.browser.back": "Возврат на предыдущую страницу",
   "loc.browser.forward": "Перейти на следующую страницу",
-  "loc.browser.caps.setting": "Установка capabilities браузера из JSON файла: {0}",
-  "loc.browser.config.setting": "Установка настроек браузера из JSON файла: {0}",
+  "loc.browser.capabilities": "Получили capabilities браузера из settings файла: {0}",
+  "loc.browser.options": "Получили опции профиля браузера из settings файла: {0}",
   "loc.browser.driver.quit": "Закрытие драйвера браузера",
   "loc.browser.getUrl": "Получение ссылки текущей страницы",
   "loc.browser.grid": "Установка драйвера браузера из Selenium Grid хаба",
@@ -15,7 +15,6 @@
   "loc.browser.ready": "Браузер '{0}' готов...",
   "loc.browser.refresh": "Обновление страницы",
   "loc.browser.alert.fail": "Не удалось обработать всплывающее окно",
-  "loc.element.wasnotfoundinstate": "Элемент '{0}' в состоянии {1} не найден в течении {2} секунд",
   "loc.button": "Кнопка",
   "loc.checkbox": "Чекбокс",
   "loc.checkbox.get.state": "Получение состояния",
@@ -31,35 +30,31 @@
   "loc.combobox.get.values": "Получение списка значений",
   "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
   "loc.el.getattr": "Получение аттрибута '{0}'",
+  "loc.el.attr.value": "Значение аттрибута '{0}': [{1}]",
   "loc.el.cssvalue": "Получение значения css '{0}'",
-  "loc.file.reading_exception": "Исключение при чтении файла: '{0}'%n",
   "loc.focusing": "Взятие элемента в фокус",
   "loc.get.text": "Получение текста элемента",
+  "loc.text.value": "Текст элемента: [{0}]",
   "loc.get.text.js": "Получение текста элемента посредством JavaScript",
   "loc.hover.js": "Наведение курсора на элемент посредством JavaScript",
-  "loc.is.present.js": "Присутствует (посредством JavaScript)",
+  "loc.is.present.js": "Присутствует ли (посредством JavaScript)",
+  "loc.is.present.value": "Присутствует ли на экране: [{0}]",
+  "loc.get.xpath.js": "Получение XPath локатора элемента посредством JavaScrip",
+  "loc.xpath.value": "XPath локатор: [{0}]",
   "loc.label": "Надпись",
   "loc.link": "Ссылка",
   "loc.moving": "Наведение курсора на элемент",
+  "loc.movingFrom": "Сдвиг курсора с элемента",
   "loc.radio": "Радиокнопка",
   "loc.scrolling.center.js": "Скроллинг в центр посредством JavaScript",
   "loc.scrolling.js": "Скроллинг с помощью JavaScript",
-  "loc.selecting.value": "Выбор значения",
+  "loc.selecting.value": "Выбор значения - '{0}'",
   "loc.send.text": "Ввод текста - '{0}'",
   "loc.setting.value": "Установка значения - '{0}'",
   "loc.text.clearing": "Очистка",
   "loc.text.field": "Текстовое поле",
-  "loc.text.sending.keys": "Нажатие клавиши '{0}'",
+  "loc.text.sending.key": "Нажатие клавиши '{0}'",
   "loc.text.typing": "Ввод текста '{0}'",
-  "loc.waitexists": "Ожидаем появления элемента в DOM",
-  "loc.waitinstate": "Ожидание присутствия элемента в состоянии {0} используя локатор: {1}",
-  "loc.waitinvisible": "Ожидаем пока элемент исчезнет",
-  "loc.waitnotexists": "Ожидаем исчезновения элемента из DOM в течении {0}",
-  "loc.no.elements.found.in.state": "Не удалось найти элементов по локатору '{0}' в {1} состоянии",
-  "loc.no.elements.found.by.locator": "Не удалось найти элементов по локатору '{0}'",
-  "loc.elements.were.found.but.not.in.state": "Удалось найти элементы по локатору '{0}', но они не в желаемом состоянии {1}",
-  "loc.elements.found.but.should.not": "Не должно быть найдено элементов по локатору '{0}' в {1} состоянии",
-  "loc.search.of.elements.failed": "Поиск элемента по локатору '{0}' прошел неудачно",
   "loc.browser.switch.to.tab.handle": "Переключение на новую вкладку по дескриптору '{0}'",
   "loc.browser.switch.to.tab.index": "Переключение на новую вкладку по индексу '{0}'",
   "loc.browser.switch.to.new.tab": "Переключение на новую вкладку",
