Enhanced logging for CheckBox, RadioButton, ComboBox and TextBox methods

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -17,18 +17,25 @@
   "loc.browser.alert.fail": "Не удалось обработать всплывающее окно",
   "loc.button": "Кнопка",
   "loc.checkbox": "Чекбокс",
-  "loc.checkbox.get.state": "Получение состояния",
+  "loc.checkable.get.state": "Получение состояния",
+  "loc.checkable.state": "Cостояние: [{0}]",
   "loc.clicking": "Клик",
   "loc.clicking.double": "Двойной Клик",
   "loc.clicking.js": "Клик посредством JavaScript",
   "loc.clicking.right": "Клик правой кнопкой",
   "loc.combobox": "Комбобокс",
+  "loc.combobox.getting.selected.text": "Получаем выбранный текст",
+  "loc.combobox.getting.selected.value": "Получаем выбранное значение",
+  "loc.combobox.selected.text": "Выбранный текст: [{0}]",
+  "loc.combobox.selected.value": "Выбранное значение: [{0}]",
   "loc.combobox.select.by.text": "Выбор значения с текстом '{0}'",
   "loc.combobox.select.by.text.js": "Выбор значения с текстом '{0}' посредством JavaScript",
   "loc.combobox.get.texts": "Получение списка текстов опций",
   "loc.combobox.get.texts.js": "Получение списка текстов опций посредством JavaScript",
   "loc.combobox.get.values": "Получение списка значений",
   "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
+  "loc.combobox.texts": "Список текстов опций: [{0}]",
+  "loc.combobox.values": "Список значений: [{0}]",
   "loc.el.getattr": "Получение аттрибута '{0}'",
   "loc.el.attr.value": "Значение аттрибута '{0}': [{1}]",
   "loc.el.cssvalue": "Получение значения css '{0}'",
@@ -52,6 +59,7 @@
   "loc.send.text": "Ввод текста - '{0}'",
   "loc.setting.value": "Установка значения - '{0}'",
   "loc.text.clearing": "Очистка",
+  "loc.text.submitting": "Отправка",
   "loc.text.field": "Текстовое поле",
   "loc.text.sending.key": "Нажатие клавиши '{0}'",
   "loc.text.typing": "Ввод текста '{0}'",
