--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -17,18 +17,25 @@
   "loc.browser.alert.fail": "Failed while handling alert",
   "loc.button": "Button",
   "loc.checkbox": "CheckBox",
-  "loc.checkbox.get.state": "Getting state",
+  "loc.checkable.get.state": "Getting state",
+  "loc.checkable.state": "State: [{0}]",
   "loc.clicking": "Clicking",
   "loc.clicking.double": "Clicking double",
   "loc.clicking.js": "Clicking via Javascript",
   "loc.clicking.right": "Clicking right",
   "loc.combobox": "ComboBox",
+  "loc.combobox.getting.selected.text": "Getting selected text",
+  "loc.combobox.getting.selected.value": "Getting selected value",
+  "loc.combobox.selected.text": "Selected text: [{0}]",
+  "loc.combobox.selected.value": "Selected value: [{0}]",
   "loc.combobox.select.by.text": "Selecting value by text '{0}'",
   "loc.combobox.select.by.text.js": "Selecting value by text '{0}' via JavaScript",
   "loc.combobox.get.texts": "Getting option texts array",
   "loc.combobox.get.texts.js": "Getting option texts array via JavaScript",
   "loc.combobox.get.values": "Getting values array",
   "loc.combobox.get.text.js": "Getting selected text via JavaScript",
+  "loc.combobox.texts": "Option texts: [{0}]",
+  "loc.combobox.values": "Option values: [{0}]",
   "loc.el.getattr": "Getting attribute '{0}'",
   "loc.el.attr.value": "Value of attribute '{0}': [{1}]",
   "loc.el.cssvalue": "Getting css value '{0}'",
@@ -52,6 +59,7 @@
   "loc.send.text": "Setting text - '{0}'",
   "loc.setting.value": "Setting value - '{0}'",
   "loc.text.clearing": "Clearing",
+  "loc.text.submitting": "Submitting",
   "loc.text.field": "Text Field",
   "loc.text.sending.key": "Sending key '{0}'",
   "loc.text.typing": "Typing '{0}'",
