Reworked BrowserFactory: make Browser {get;} a template method

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -6,10 +6,12 @@
   "loc.browser.options": "Got browser profile options from settings file: {0}",
   "loc.browser.driver.quit": "Closing browser",
   "loc.browser.getUrl": "Getting current url",
+  "loc.browser.url.value": "Current url: [{0}]",
   "loc.browser.grid": "Setting webdriver from selenium grid hub",
   "loc.browser.grid.fail": "Driver setting  from Selenium Grid hub was failed",
   "loc.browser.maximize": "Maximizing browser window",
   "loc.browser.navigate": "Navigate to url - '{0}'",
+  "loc.browser.page.wait": "Waiting for page to load",
   "loc.browser.page.timeout": "Page loading timed out",
   "loc.browser.ready": "Browser '{0}' ready...",
   "loc.browser.refresh": "Refreshing the page",
