--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -5,11 +5,13 @@
   "loc.browser.capabilities": "Получили capabilities браузера из settings файла: {0}",
   "loc.browser.options": "Получили опции профиля браузера из settings файла: {0}",
   "loc.browser.driver.quit": "Закрытие драйвера браузера",
-  "loc.browser.getUrl": "Получение ссылки текущей страницы",
+  "loc.browser.getUrl": "Получение адреса текущей страницы",
+  "loc.browser.url.value": "Адрес текущей страницы: [{0}]",
   "loc.browser.grid": "Установка драйвера браузера из Selenium Grid хаба",
   "loc.browser.grid.fail": "Ошибка при получении драйвера из Selenium Grid хаба",
   "loc.browser.maximize": "Открытие браузера на всё окно",
   "loc.browser.navigate": "Переход на страницу - '{0}'",
+  "loc.browser.page.wait": "Ожидание загрузки страницы",
   "loc.browser.page.timeout": "Таймаут загрузки страницы",
   "loc.browser.ready": "Браузер '{0}' готов...",
   "loc.browser.refresh": "Обновление страницы",
