Add logging of Browser's handle alert methods

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -15,6 +15,8 @@
   "loc.browser.page.timeout": "Page loading timed out",
   "loc.browser.ready": "Browser '{0}' ready...",
   "loc.browser.refresh": "Refreshing the page",
+  "loc.browser.alert.accept": "Accepting browser alert",
+  "loc.browser.alert.decline": "Dismissing browser alert",
   "loc.browser.alert.fail": "Failed while handling alert",
   "loc.button": "Button",
   "loc.checkbox": "CheckBox",
