--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -15,6 +15,8 @@
   "loc.browser.page.timeout": "Таймаут загрузки страницы",
   "loc.browser.ready": "Браузер '{0}' готов...",
   "loc.browser.refresh": "Обновление страницы",
+  "loc.browser.alert.accept": "Подтверждение действия во всплывающем окне",
+  "loc.browser.alert.decline": "Отклонение действия во всплывающем окне",
   "loc.browser.alert.fail": "Не удалось обработать всплывающее окно",
   "loc.button": "Кнопка",
   "loc.checkbox": "Чекбокс",
