--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -1,66 +1,71 @@
 {
-  "loc.browser.arguments.setting": "Setting browser start arguments from JSON file: {0}",
+  "loc.browser.arguments": "Got browser start arguments from settings file: {0}",
   "loc.browser.back": "Return to previous page",
   "loc.browser.forward": "Proceed to the next page",
-  "loc.browser.caps.setting": "Setting browser capabilities from JSON file: {0}",
-  "loc.browser.config.setting": "Setting browser profile options from JSON file: {0}",
+  "loc.browser.capabilities": "Got browser capabilities from settings file: {0}",
+  "loc.browser.options": "Got browser profile options from settings file: {0}",
   "loc.browser.driver.quit": "Closing browser",
   "loc.browser.getUrl": "Getting current url",
+  "loc.browser.url.value": "Current url: [{0}]",
   "loc.browser.grid": "Setting webdriver from selenium grid hub",
-  "loc.browser.grid.fail": "Driver setting  from Selenium Grid hub was failed",
+  "loc.browser.grid.fail": "Driver setting from Selenium Grid hub was failed",
   "loc.browser.maximize": "Maximizing browser window",
-  "loc.browser.name.wrong": "Browser name is wrong.",
   "loc.browser.navigate": "Navigate to url - '{0}'",
+  "loc.browser.page.wait": "Waiting for page to load",
   "loc.browser.page.timeout": "Page loading timed out",
   "loc.browser.ready": "Browser '{0}' ready...",
   "loc.browser.refresh": "Refreshing the page",
+  "loc.browser.alert.accept": "Accepting browser alert",
+  "loc.browser.alert.decline": "Dismissing browser alert",
   "loc.browser.alert.fail": "Failed while handling alert",
   "loc.button": "Button",
   "loc.checkbox": "CheckBox",
-  "loc.checkbox.get.state": "Getting state",
+  "loc.checkable.get.state": "Getting state",
+  "loc.checkable.state": "State: [{0}]",
   "loc.clicking": "Clicking",
   "loc.clicking.double": "Clicking double",
   "loc.clicking.js": "Clicking via Javascript",
   "loc.clicking.right": "Clicking right",
   "loc.combobox": "ComboBox",
+  "loc.combobox.getting.selected.text": "Getting selected text",
+  "loc.combobox.getting.selected.value": "Getting selected value",
+  "loc.combobox.selected.text": "Selected text: [{0}]",
+  "loc.combobox.selected.value": "Selected value: [{0}]",
   "loc.combobox.select.by.text": "Selecting value by text '{0}'",
   "loc.combobox.select.by.text.js": "Selecting value by text '{0}' via JavaScript",
   "loc.combobox.get.texts": "Getting option texts array",
   "loc.combobox.get.texts.js": "Getting option texts array via JavaScript",
   "loc.combobox.get.values": "Getting values array",
   "loc.combobox.get.text.js": "Getting selected text via JavaScript",
+  "loc.combobox.texts": "Option texts: [{0}]",
+  "loc.combobox.values": "Option values: [{0}]",
   "loc.el.getattr": "Getting attribute '{0}'",
+  "loc.el.attr.value": "Value of attribute '{0}': [{1}]",
   "loc.el.cssvalue": "Getting css value '{0}'",
-  "loc.file.reading_exception": "Exception while reading file: '{0}'",
   "loc.focusing": "Focusing",
   "loc.get.text": "Getting text from element",
+  "loc.text.value": "Element's text: [{0}]",
   "loc.get.text.js": "Getting text from element via Javascript",
   "loc.hover.js": "Hover mouse over element via JavaScript",
   "loc.is.present.js": "Is present via JavaScript",
+  "loc.is.present.value": "Is present on screen: [{0}]",
   "loc.get.xpath.js": "Getting XPath locator of element via JavaScript",
+  "loc.xpath.value": "XPath locator: [{0}]",
   "loc.label": "Label",
   "loc.link": "Link",
-  "loc.mouse.up": "Mouse Up",
   "loc.moving": "Moving mouse to element",
+  "loc.movingFrom": "Moving mouse from element",
   "loc.radio": "RadioButton",
   "loc.scrolling.center.js": "Scrolling to the center via JavaScript",
   "loc.scrolling.js": "Scrolling via JavaScript",
-  "loc.selecting.value": "Selecting value",
+  "loc.selecting.value": "Selecting value - '{0}'",
   "loc.send.text": "Setting text - '{0}'",
   "loc.setting.value": "Setting value - '{0}'",
   "loc.text.clearing": "Clearing",
+  "loc.text.submitting": "Submitting",
   "loc.text.field": "Text Field",
-  "loc.text.sending.keys": "Sending keys '{0}'",
+  "loc.text.sending.key": "Sending key '{0}'",
   "loc.text.typing": "Typing '{0}'",
-  "loc.waitexists": "Wait until element exists in DOM",
-  "loc.waitinstate": "Wait until is present in state {0} using locator: {1}",
-  "loc.waitinvisible": "Wait until element is not visible",
-  "loc.waitnotexists": "Wait until element does not exist in DOM during {0} seconds",
-  "loc.no.elements.found.in.state": "No elements with locator '{0}' found in {1} state",
-  "loc.no.elements.found.by.locator": "No elements were found by locator '{0}'",
-  "loc.elements.were.found.but.not.in.state": "Elements were found by locator '{0}' but not in desired state {1}",
-  "loc.elements.found.but.should.not": "No elements should be found by locator '{0}' in {1} state",
-  "loc.search.of.elements.failed": "Search of element by locator '{0}' failed",
   "loc.browser.switch.to.tab.handle": "Switching to tab by handle '{0}'",
   "loc.browser.switch.to.tab.index": "Switching to tab by index '{0}'",
   "loc.browser.switch.to.new.tab": "Switching to new tab",
