--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/ru.json
@@ -1,70 +1,76 @@
 {
-  "loc.browser.arguments.setting": "Установка стартовых аргументов браузера из JSON файла: {0}",
-  "loc.browser.back": "Возврат на предыдущую страницу",
-  "loc.browser.forward": "Перейти на следующую страницу",
-  "loc.browser.caps.setting": "Установка capabilities браузера из JSON файла: {0}",
-  "loc.browser.config.setting": "Установка настроек браузера из JSON файла: {0}",
-  "loc.browser.driver.quit": "Закрытие драйвера браузера",
-  "loc.browser.getUrl": "Получение ссылки текущей страницы",
-  "loc.browser.grid": "Установка драйвера браузера из Selenium Grid хаба",
-  "loc.browser.grid.fail": "Ошибка при получении драйвера из Selenium Grid хаба",
-  "loc.browser.maximize": "Открытие браузера на всё окно",
-  "loc.browser.name.wrong": "Неверное имя браузера.",
-  "loc.browser.navigate": "Переход на страницу - '{0}'",
-  "loc.browser.page.timeout": "Таймаут загрузки страницы",
-  "loc.browser.ready": "Браузер '{0}' готов...",
-  "loc.browser.refresh": "Обновление страницы",
-  "loc.browser.alert.fail": "Не удалось обработать всплывающее окно",
-  "loc.element.wasnotfoundinstate": "Элемент '{0}' в состоянии {1} не найден в течении {2} секунд",
-  "loc.button": "Кнопка",
-  "loc.checkbox": "Чекбокс",
-  "loc.checkbox.get.state": "Получение состояния",
-  "loc.clicking": "Клик",
-  "loc.clicking.double": "Двойной Клик",
-  "loc.clicking.js": "Клик посредством JavaScript",
-  "loc.clicking.right": "Клик правой кнопкой",
-  "loc.combobox": "Комбобокс",
-  "loc.combobox.select.by.text": "Выбор значения с текстом '{0}'",
-  "loc.combobox.select.by.text.js": "Выбор значения с текстом '{0}' посредством JavaScript",
-  "loc.combobox.get.texts": "Получение списка текстов опций",
-  "loc.combobox.get.texts.js": "Получение списка текстов опций посредством JavaScript",
-  "loc.combobox.get.values": "Получение списка значений",
-  "loc.combobox.get.text.js": "Получение списка значений посредством JavaScript",
-  "loc.el.getattr": "Получение аттрибута '{0}'",
-  "loc.el.cssvalue": "Получение значения css '{0}'",
-  "loc.file.reading_exception": "Исключение при чтении файла: '{0}'%n",
-  "loc.focusing": "Взятие элемента в фокус",
-  "loc.get.text": "Получение текста элемента",
-  "loc.get.text.js": "Получение текста элемента посредством JavaScript",
-  "loc.hover.js": "Наведение курсора на элемент посредством JavaScript",
-  "loc.is.present.js": "Присутствует (посредством JavaScript)",
-  "loc.label": "Надпись",
-  "loc.link": "Ссылка",
-  "loc.moving": "Наведение курсора на элемент",
-  "loc.radio": "Радиокнопка",
-  "loc.scrolling.center.js": "Скроллинг в центр посредством JavaScript",
-  "loc.scrolling.js": "Скроллинг с помощью JavaScript",
-  "loc.selecting.value": "Выбор значения",
-  "loc.send.text": "Ввод текста - '{0}'",
-  "loc.setting.value": "Установка значения - '{0}'",
-  "loc.text.clearing": "Очистка",
-  "loc.text.field": "Текстовое поле",
-  "loc.text.sending.keys": "Нажатие клавиши '{0}'",
-  "loc.text.typing": "Ввод текста '{0}'",
-  "loc.waitexists": "Ожидаем появления элемента в DOM",
-  "loc.waitinstate": "Ожидание присутствия элемента в состоянии {0} используя локатор: {1}",
-  "loc.waitinvisible": "Ожидаем пока элемент исчезнет",
-  "loc.waitnotexists": "Ожидаем исчезновения элемента из DOM в течении {0}",
-  "loc.no.elements.found.in.state": "Не удалось найти элементов по локатору '{0}' в {1} состоянии",
-  "loc.no.elements.found.by.locator": "Не удалось найти элементов по локатору '{0}'",
-  "loc.elements.were.found.but.not.in.state": "Удалось найти элементы по локатору '{0}', но они не в желаемом состоянии {1}",
-  "loc.elements.found.but.should.not": "Не должно быть найдено элементов по локатору '{0}' в {1} состоянии",
-  "loc.search.of.elements.failed": "Поиск элемента по локатору '{0}' прошел неудачно",
-  "loc.browser.switch.to.tab.handle": "Переключение на новую вкладку по дескриптору '{0}'",
-  "loc.browser.switch.to.tab.index": "Переключение на новую вкладку по индексу '{0}'",
-  "loc.browser.switch.to.new.tab": "Переключение на новую вкладку",
-  "loc.browser.get.tab.handles": "Получение списка дескрипторов открытых вкладок",
-  "loc.browser.get.tab.handle": "Получение дескриптора текущей вкладки",
-  "loc.browser.tab.open.new": "Открытие новой вкладки",
-  "loc.browser.tab.close": "Закрытие вкладки"
+  "loc.browser.arguments": "РџРѕР»СѓС‡РёР»Рё СЃС‚Р°СЂС‚РѕРІС‹Рµ Р°СЂРіСѓРјРµРЅС‚С‹ Р±СЂР°СѓР·РµСЂР° РёР· settings С„Р°Р№Р»Р°: {0}",
+  "loc.browser.back": "Р’РѕР·РІСЂР°С‚ РЅР° РїСЂРµРґС‹РґСѓС‰СѓСЋ СЃС‚СЂР°РЅРёС†Сѓ",
+  "loc.browser.forward": "РџРµСЂРµР№С‚Рё РЅР° СЃР»РµРґСѓСЋС‰СѓСЋ СЃС‚СЂР°РЅРёС†Сѓ",
+  "loc.browser.capabilities": "РџРѕР»СѓС‡РёР»Рё capabilities Р±СЂР°СѓР·РµСЂР° РёР· settings С„Р°Р№Р»Р°: {0}",
+  "loc.browser.options": "РџРѕР»СѓС‡РёР»Рё РѕРїС†РёРё РїСЂРѕС„РёР»СЏ Р±СЂР°СѓР·РµСЂР° РёР· settings С„Р°Р№Р»Р°: {0}",
+  "loc.browser.driver.quit": "Р—Р°РєСЂС‹С‚РёРµ РґСЂР°Р№РІРµСЂР° Р±СЂР°СѓР·РµСЂР°",
+  "loc.browser.getUrl": "РџРѕР»СѓС‡РµРЅРёРµ Р°РґСЂРµСЃР° С‚РµРєСѓС‰РµР№ СЃС‚СЂР°РЅРёС†С‹",
+  "loc.browser.url.value": "РђРґСЂРµСЃ С‚РµРєСѓС‰РµР№ СЃС‚СЂР°РЅРёС†С‹: [{0}]",
+  "loc.browser.grid": "РЈСЃС‚Р°РЅРѕРІРєР° РґСЂР°Р№РІРµСЂР° Р±СЂР°СѓР·РµСЂР° РёР· Selenium Grid С…Р°Р±Р°",
+  "loc.browser.grid.fail": "РћС€РёР±РєР° РїСЂРё РїРѕР»СѓС‡РµРЅРёРё РґСЂР°Р№РІРµСЂР° РёР· Selenium Grid С…Р°Р±Р°",
+  "loc.browser.maximize": "РћС‚РєСЂС‹С‚РёРµ Р±СЂР°СѓР·РµСЂР° РЅР° РІСЃС‘ РѕРєРЅРѕ",
+  "loc.browser.navigate": "РџРµСЂРµС…РѕРґ РЅР° СЃС‚СЂР°РЅРёС†Сѓ - '{0}'",
+  "loc.browser.page.wait": "РћР¶РёРґР°РЅРёРµ Р·Р°РіСЂСѓР·РєРё СЃС‚СЂР°РЅРёС†С‹",
+  "loc.browser.page.timeout": "РўР°Р№РјР°СѓС‚ Р·Р°РіСЂСѓР·РєРё СЃС‚СЂР°РЅРёС†С‹",
+  "loc.browser.ready": "Р‘СЂР°СѓР·РµСЂ '{0}' РіРѕС‚РѕРІ...",
+  "loc.browser.refresh": "РћР±РЅРѕРІР»РµРЅРёРµ СЃС‚СЂР°РЅРёС†С‹",
+  "loc.browser.alert.accept": "РџРѕРґС‚РІРµСЂР¶РґРµРЅРёРµ РґРµР№СЃС‚РІРёСЏ РІРѕ РІСЃРїР»С‹РІР°СЋС‰РµРј РѕРєРЅРµ",
+  "loc.browser.alert.decline": "РћС‚РєР»РѕРЅРµРЅРёРµ РґРµР№СЃС‚РІРёСЏ РІРѕ РІСЃРїР»С‹РІР°СЋС‰РµРј РѕРєРЅРµ",
+  "loc.browser.alert.fail": "РќРµ СѓРґР°Р»РѕСЃСЊ РѕР±СЂР°Р±РѕС‚Р°С‚СЊ РІСЃРїР»С‹РІР°СЋС‰РµРµ РѕРєРЅРѕ",
+  "loc.button": "РљРЅРѕРїРєР°",
+  "loc.checkbox": "Р§РµРєР±РѕРєСЃ",
+  "loc.checkable.get.state": "РџРѕР»СѓС‡РµРЅРёРµ СЃРѕСЃС‚РѕСЏРЅРёСЏ",
+  "loc.checkable.state": "CРѕСЃС‚РѕСЏРЅРёРµ: [{0}]",
+  "loc.clicking": "РљР»РёРє",
+  "loc.clicking.double": "Р”РІРѕР№РЅРѕР№ РљР»РёРє",
+  "loc.clicking.js": "РљР»РёРє РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.clicking.right": "РљР»РёРє РїСЂР°РІРѕР№ РєРЅРѕРїРєРѕР№",
+  "loc.combobox": "РљРѕРјР±РѕР±РѕРєСЃ",
+  "loc.combobox.getting.selected.text": "РџРѕР»СѓС‡Р°РµРј РІС‹Р±СЂР°РЅРЅС‹Р№ С‚РµРєСЃС‚",
+  "loc.combobox.getting.selected.value": "РџРѕР»СѓС‡Р°РµРј РІС‹Р±СЂР°РЅРЅРѕРµ Р·РЅР°С‡РµРЅРёРµ",
+  "loc.combobox.selected.text": "Р’С‹Р±СЂР°РЅРЅС‹Р№ С‚РµРєСЃС‚: [{0}]",
+  "loc.combobox.selected.value": "Р’С‹Р±СЂР°РЅРЅРѕРµ Р·РЅР°С‡РµРЅРёРµ: [{0}]",
+  "loc.combobox.select.by.text": "Р’С‹Р±РѕСЂ Р·РЅР°С‡РµРЅРёСЏ СЃ С‚РµРєСЃС‚РѕРј '{0}'",
+  "loc.combobox.select.by.text.js": "Р’С‹Р±РѕСЂ Р·РЅР°С‡РµРЅРёСЏ СЃ С‚РµРєСЃС‚РѕРј '{0}' РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.combobox.get.texts": "РџРѕР»СѓС‡РµРЅРёРµ СЃРїРёСЃРєР° С‚РµРєСЃС‚РѕРІ РѕРїС†РёР№",
+  "loc.combobox.get.texts.js": "РџРѕР»СѓС‡РµРЅРёРµ СЃРїРёСЃРєР° С‚РµРєСЃС‚РѕРІ РѕРїС†РёР№ РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.combobox.get.values": "РџРѕР»СѓС‡РµРЅРёРµ СЃРїРёСЃРєР° Р·РЅР°С‡РµРЅРёР№",
+  "loc.combobox.get.text.js": "РџРѕР»СѓС‡РµРЅРёРµ СЃРїРёСЃРєР° Р·РЅР°С‡РµРЅРёР№ РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.combobox.texts": "РЎРїРёСЃРѕРє С‚РµРєСЃС‚РѕРІ РѕРїС†РёР№: [{0}]",
+  "loc.combobox.values": "РЎРїРёСЃРѕРє Р·РЅР°С‡РµРЅРёР№: [{0}]",
+  "loc.el.getattr": "РџРѕР»СѓС‡РµРЅРёРµ Р°С‚С‚СЂРёР±СѓС‚Р° '{0}'",
+  "loc.el.attr.value": "Р—РЅР°С‡РµРЅРёРµ Р°С‚С‚СЂРёР±СѓС‚Р° '{0}': [{1}]",
+  "loc.el.cssvalue": "РџРѕР»СѓС‡РµРЅРёРµ Р·РЅР°С‡РµРЅРёСЏ css '{0}'",
+  "loc.focusing": "Р’Р·СЏС‚РёРµ СЌР»РµРјРµРЅС‚Р° РІ С„РѕРєСѓСЃ",
+  "loc.get.text": "РџРѕР»СѓС‡РµРЅРёРµ С‚РµРєСЃС‚Р° СЌР»РµРјРµРЅС‚Р°",
+  "loc.text.value": "РўРµРєСЃС‚ СЌР»РµРјРµРЅС‚Р°: [{0}]",
+  "loc.get.text.js": "РџРѕР»СѓС‡РµРЅРёРµ С‚РµРєСЃС‚Р° СЌР»РµРјРµРЅС‚Р° РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.hover.js": "РќР°РІРµРґРµРЅРёРµ РєСѓСЂСЃРѕСЂР° РЅР° СЌР»РµРјРµРЅС‚ РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.is.present.js": "РџСЂРёСЃСѓС‚СЃС‚РІСѓРµС‚ Р»Рё (РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript)",
+  "loc.is.present.value": "РџСЂРёСЃСѓС‚СЃС‚РІСѓРµС‚ Р»Рё РЅР° СЌРєСЂР°РЅРµ: [{0}]",
+  "loc.get.xpath.js": "РџРѕР»СѓС‡РµРЅРёРµ XPath Р»РѕРєР°С‚РѕСЂР° СЌР»РµРјРµРЅС‚Р° РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScrip",
+  "loc.xpath.value": "XPath Р»РѕРєР°С‚РѕСЂ: [{0}]",
+  "loc.label": "РќР°РґРїРёСЃСЊ",
+  "loc.link": "РЎСЃС‹Р»РєР°",
+  "loc.moving": "РќР°РІРµРґРµРЅРёРµ РєСѓСЂСЃРѕСЂР° РЅР° СЌР»РµРјРµРЅС‚",
+  "loc.movingFrom": "РЎРґРІРёРі РєСѓСЂСЃРѕСЂР° СЃ СЌР»РµРјРµРЅС‚Р°",
+  "loc.radio": "Р Р°РґРёРѕРєРЅРѕРїРєР°",
+  "loc.scrolling.center.js": "РЎРєСЂРѕР»Р»РёРЅРі РІ С†РµРЅС‚СЂ РїРѕСЃСЂРµРґСЃС‚РІРѕРј JavaScript",
+  "loc.scrolling.js": "РЎРєСЂРѕР»Р»РёРЅРі СЃ РїРѕРјРѕС‰СЊСЋ JavaScript",
+  "loc.selecting.value": "Р’С‹Р±РѕСЂ Р·РЅР°С‡РµРЅРёСЏ - '{0}'",
+  "loc.send.text": "Р’РІРѕРґ С‚РµРєСЃС‚Р° - '{0}'",
+  "loc.setting.value": "РЈСЃС‚Р°РЅРѕРІРєР° Р·РЅР°С‡РµРЅРёСЏ - '{0}'",
+  "loc.text.clearing": "РћС‡РёСЃС‚РєР°",
+  "loc.text.submitting": "РћС‚РїСЂР°РІРєР°",
+  "loc.text.field": "РўРµРєСЃС‚РѕРІРѕРµ РїРѕР»Рµ",
+  "loc.text.sending.key": "РќР°Р¶Р°С‚РёРµ РєР»Р°РІРёС€Рё '{0}'",
+  "loc.text.typing": "Р’РІРѕРґ С‚РµРєСЃС‚Р° '{0}'",
+  "loc.browser.switch.to.tab.handle": "РџРµСЂРµРєР»СЋС‡РµРЅРёРµ РЅР° РЅРѕРІСѓСЋ РІРєР»Р°РґРєСѓ РїРѕ РґРµСЃРєСЂРёРїС‚РѕСЂСѓ '{0}'",
+  "loc.browser.switch.to.tab.index": "РџРµСЂРµРєР»СЋС‡РµРЅРёРµ РЅР° РЅРѕРІСѓСЋ РІРєР»Р°РґРєСѓ РїРѕ РёРЅРґРµРєСЃСѓ '{0}'",
+  "loc.browser.switch.to.new.tab": "РџРµСЂРµРєР»СЋС‡РµРЅРёРµ РЅР° РЅРѕРІСѓСЋ РІРєР»Р°РґРєСѓ",
+  "loc.browser.get.tab.handles": "РџРѕР»СѓС‡РµРЅРёРµ СЃРїРёСЃРєР° РґРµСЃРєСЂРёРїС‚РѕСЂРѕРІ РѕС‚РєСЂС‹С‚С‹С… РІРєР»Р°РґРѕРє",
+  "loc.browser.get.tab.handle": "РџРѕР»СѓС‡РµРЅРёРµ РґРµСЃРєСЂРёРїС‚РѕСЂР° С‚РµРєСѓС‰РµР№ РІРєР»Р°РґРєРё",
+  "loc.browser.tab.open.new": "РћС‚РєСЂС‹С‚РёРµ РЅРѕРІРѕР№ РІРєР»Р°РґРєРё",
+  "loc.browser.tab.close": "Р—Р°РєСЂС‹С‚РёРµ РІРєР»Р°РґРєРё"
 }
