--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/Localization/en.json
@@ -5,12 +5,12 @@
   "loc.browser.capabilities": "Got browser capabilities from settings file: {0}",
   "loc.browser.options": "Got browser profile options from settings file: {0}",
   "loc.browser.driver.quit": "Closing browser",
-  "loc.browser.getUrl": "Getting current url",
-  "loc.browser.url.value": "Current url: [{0}]",
-  "loc.browser.grid": "Setting webdriver from selenium grid hub",
+  "loc.browser.getUrl": "Getting current URL",
+  "loc.browser.url.value": "Current URL: [{0}]",
+  "loc.browser.grid": "Setting WebDriver from selenium grid hub",
   "loc.browser.grid.fail": "Driver setting from Selenium Grid hub was failed",
   "loc.browser.maximize": "Maximizing browser window",
-  "loc.browser.navigate": "Navigate to url - '{0}'",
+  "loc.browser.navigate": "Navigate to URL - '{0}'",
   "loc.browser.page.wait": "Waiting for page to load",
   "loc.browser.page.timeout": "Page loading timed out",
   "loc.browser.ready": "Browser '{0}' ready...",
@@ -24,7 +24,7 @@
   "loc.checkable.state": "State: [{0}]",
   "loc.clicking": "Clicking",
   "loc.clicking.double": "Clicking double",
-  "loc.clicking.js": "Clicking via Javascript",
+  "loc.clicking.js": "Clicking via JavaScript",
   "loc.clicking.right": "Clicking right",
   "loc.combobox": "ComboBox",
   "loc.combobox.getting.selected.text": "Getting selected text",
@@ -45,7 +45,7 @@
   "loc.focusing": "Focusing",
   "loc.get.text": "Getting text from element",
   "loc.text.value": "Element's text: [{0}]",
-  "loc.get.text.js": "Getting text from element via Javascript",
+  "loc.get.text.js": "Getting text from element via JavaScript",
   "loc.hover.js": "Hover mouse over element via JavaScript",
   "loc.is.present.js": "Is present via JavaScript",
   "loc.is.present.value": "Is present on screen: [{0}]",
@@ -72,5 +72,17 @@
   "loc.browser.get.tab.handles": "Getting tab handles",
   "loc.browser.get.tab.handle": "Getting current tab handle",
   "loc.browser.tab.open.new": "Opening new tab",
-  "loc.browser.tab.close": "Closing tab"
+  "loc.browser.tab.close": "Closing tab",
+  "loc.browser.network.event.requestsent.add": "Subscribing to Network Request Sent event",
+  "loc.browser.network.event.requestsent.remove": "Unsubscribing from Network Request Sent event",
+  "loc.browser.network.event.responsereceived.add": "Subscribing to Network Response Received event",
+  "loc.browser.network.event.responsereceived.remove": "Unsubscribing from Network Response Received event",
+  "loc.browser.network.handler.authentication.add": "Adding Basic Authentication handler",
+  "loc.browser.network.handler.authentication.clear": "Clearing Basic Authentication handlers",
+  "loc.browser.network.handler.request.add": "Adding Network Request handler",
+  "loc.browser.network.handler.request.clear": "Clearing Network Request handlers",
+  "loc.browser.network.handler.response.add": "Adding Network Response handler",
+  "loc.browser.network.handler.response.clear": "Clearing Network Response handler",
+  "loc.browser.network.monitoring.start": "Starting Network Monitoring",
+  "loc.browser.network.monitoring.stop": "Stopping Network Monitoring"
 }
